Add headers configuration option

--- a/gss.yaml
+++ b/gss.yaml
@@ -1,2 +1,5 @@
 directory: public
+headers:
+  Referrer-Policy: "strict-origin-when-cross-origin"
+  Strict-Transport-Security: "max-age=63072000; includeSubDomains; preload"
 port: 7892
