--- a/ready.yaml
+++ b/ready.yaml
@@ -1,9 +1,9 @@
 tasks:
-  - name: "format"
-    command: "gofumpt -extra -l -w ."
-  - name: "lint"
-    command: "golangci-lint run --allow-parallel-runners --timeout 60s"
-  - name: "vet"
-    command: "go vet ./..."
-  - name: "test"
-    command: "go test ./... -count=1 -v"
+  - name: format
+    command: gofumpt -extra -l -w .
+  - name: lint
+    command: golangci-lint run --allow-parallel-runners --timeout 60s
+  - name: vet
+    command: go vet ./...
+  - name: test
+    command: go test ./... -count 1
