--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,10 +1,10 @@
 name: Release
 
 on:
-  push:
-    tags:
-      - "*"
-  workflow_dispatch:
+  release:
+    types:
+      - created
+    workflow_dispatch:
 
 env:
   IMAGE_NAME: lewislbr/gss
