--- a/ready.yaml
+++ b/ready.yaml
@@ -1,9 +1,11 @@
 tasks:
+  - name: build ci image
+    command: docker build -t lewislbr/gss:ci --target=ci .
   - name: format
-    command: gofumpt -extra -l -w .
+    command: docker run --rm -v $(pwd):/app -w /app lewislbr/gss:ci gofumpt -extra -l -w .
   - name: lint
-    command: golangci-lint run --allow-parallel-runners --timeout 60s
+    command: docker run --rm -v $(pwd):/app -w /app lewislbr/gss:ci golangci-lint run --allow-parallel-runners --timeout 60s
   - name: vet
-    command: go vet ./...
+    command: docker run --rm -v $(pwd):/app -w /app lewislbr/gss:ci go vet ./...
   - name: test
-    command: go test ./... -count 1
+    command: sed -i "" "s|"dist"|"test/public"|g" gss.go && docker run --rm -v $(pwd):/app -w /app lewislbr/gss:ci go test; sed -i "" "s|"test/public"|"dist"|g" gss.go
