--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Get git tag
         run: echo "GIT_TAG=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
       - name: Build image
-        run: docker build -t "$IMAGE_NAME":"$GIT_TAG" -t "$IMAGE_NAME":latest .
+        run: DOCKER_BUILDKIT=1 docker build -t "$IMAGE_NAME":"$GIT_TAG" -t "$IMAGE_NAME":latest --target=prod .
       - name: Log in
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: Push image
