--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,4 +19,4 @@ jobs:
         with:
           go-version: 1.17
       - name: Test
-        run: make test
+        run: sed -i "s|"dist"|"test/public"|g" gss.go && go test
