Make metrics optional

--- a/test/gss.yaml
+++ b/test/gss.yaml
@@ -2,3 +2,4 @@ headers:
   Referrer-Policy: "strict-origin-when-cross-origin"
   Server: "GSS"
   Strict-Transport-Security: "max-age=63072000; includeSubDomains; preload"
+metrics: true
